# monstera

./: Cargo.toml
src/: error.rs  executor.rs  main.rs  monstera.pest
src/checker/: graph.rs  mod.rs  solver.rs
src/compiler/: built_in.rs  context.rs  llvm.rs  mod.rs
src/error/: mod.rs  parse.rs  semantic.rs
src/parser/: ir.rs  mod.rs
src/parser/ast/: array.rs  block.rs  expr.rs  function.rs  invoke.rs  mod.rs  op.rs  statement.rs  types.rs
src/parser/ast/types/: arena.rs  array.rs  int.rs  mod.rs  struct_type.rs
