[package]
name = "monstera"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"

pest = "2.8.1"
pest_derive = "2.8.1"

strum = "0.27.2"
strum_macros = "0.27.2"

inkwell = { version = "0.6.0", features = ["llvm18-1"]}

thiserror = "2.0.12"

lazy_static = "1.5.0"

miette = { version = "7.6.0", features = ["fancy"] }